[package]
name = "turn-tracks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
  "dynamic_linking",
  "file_watcher",
  "pbr_transmission_textures",
  "serialize",
  "webp",
  "jpeg",
  "multi-threaded",
] }
bevy-inspector-egui = "0.21.0"
derive-new = "0.6.0"
itertools = "0.12.0"
rand = { version = "0.8.5", features = ["nightly", "min_const_gen"] }
rayon = "1.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
